--- a/Mis_Primeros_Auxilitos/estilos.css
+++ b/Mis_Primeros_Auxilitos/estilos.css
@@ -5,13 +5,16 @@ class == .
 @import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400;700&display=swap');
 
 
-body{
+.body-index{
 
     margin: 0%;
-    background-color:green;
     font-family: 'DynaPuff', cursive;
+    background: linear-gradient(to right, #FF0080, #FF8C00, #40E0D0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 
 }
+
+
 
 #titulo{
 
@@ -53,5 +56,138 @@ body{
 }
 
 
+/*REGISTRO*/
+
+:root{
+    --colorTextos:rgb(0, 38, 255);
+}
+
+::before,
+::after{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+
+.body-registro{
+
+    background-color:red;
+    font-family: 'DynaPuff', cursive;
+    background: #F7971E;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #FFD200, #F7971E);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFD200, #F7971E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    height: 650px;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+
+}
+
+#tituloRegistro{
+
+    font-size:2em;
+    text-align:center;
+
+}
+
+form{
+    background:white;
+    padding: 40px 0;
+    box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
+    border-radius:10px;
+}
+
+.form{
+
+    width:100%;
+    margin:auto;
+
+}
+
+form .grupo{
+    position:relative;
+    margin:45px;
+    /*background:black;*/
+}
+
+input{
+
+    background:none;
+    color:#c6c6c6;
+    font-size:18px;
+    padding:10px 10px 10px 5px;
+    display:block;
+    width:100%;
+    border:none;
+    border-bottom: 1px solid var(--colorTextos);
+
+}
+
+input:focus{
+    outline:none;
+    color:#5e5d5d;
+}
+
+label{ 
+    color:var(--colorTextos);
+    /*color:white;*/
+    font-size:16px;
+    position:absolute;
+    left:5px;
+    top: 10px;
+    transition:0.7s ease all;
+    pointer-events: none;
+}
+
+input:focus~label,
+input:valid~label{
+    top: -14px;
+    font-size:12px;
+    color:red;
+}
+
+.barra{
+    position:relative;
+    display:block;
+    width:100%;
+}
+
+.barra::before{
+    content:"";
+    height:2px;
+    width: 0%;
+    bottom:0;
+    position:absolute;
+    background: linear-gradient(to right, #FFD200, #F7971E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    transition:0.3s ease width;
+    left:0;
+}
+
+input:focus~.barra::before{
+    width:100%;
+}
+
+#btn_Registrar{
+
+    font-family: 'DynaPuff', cursive;
+    background: #F7971E;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #FFD200, #F7971E);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFD200, #F7971E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    border-radius:10px;
+    display: block;
+    width: 80%;
+    margin:10px auto;
+    color:white;
+    height: 40px;
+    font-size: 16px;
+    cursor:pointer;
+
+}
 
 
+@media screen and (max-width:500px){
+    form{
+        width: 80%;
+    }    
+}
