--- a/Mis_Primeros_Auxilitos/estilos.css
+++ b/Mis_Primeros_Auxilitos/estilos.css
@@ -23,6 +23,7 @@ class == .
     border-radius:50px;
     color:blue;
     text-shadow:1px 3px 2px;
+    
 
 }
 
@@ -55,6 +56,7 @@ class == .
 
 }
 
+/*FIN INDEX*/
 
 /*REGISTRO*/
 
@@ -77,17 +79,26 @@ class == .
     background: -webkit-linear-gradient(to right, #FFD200, #F7971E);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #FFD200, #F7971E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-    height: 650px;
+    height: 900px;
     display: flex;
     justify-content:center;
     align-items:center;
 
 }
 
+#tituloAuxilitos{
+    font-size:2em;
+    text-align:center;
+    background:linear-gradient(to right, #ff1500, #25f71e);
+    border-radius:10px;
+    color: white;
+}
+
 #tituloRegistro{
 
     font-size:2em;
     text-align:center;
+    color:red;
 
 }
 
@@ -121,6 +132,7 @@ input{
     width:100%;
     border:none;
     border-bottom: 1px solid var(--colorTextos);
+    font-family: 'DynaPuff', cursive;
 
 }
 
@@ -138,13 +150,14 @@ label{
     top: 10px;
     transition:0.7s ease all;
     pointer-events: none;
+    
 }
 
 input:focus~label,
 input:valid~label{
     top: -14px;
     font-size:12px;
-    color:red;
+    color:rgb(177, 117, 6);
 }
 
 .barra{
@@ -191,3 +204,5 @@ input:focus~.barra::before{
         width: 80%;
     }    
 }
+
+/*FIN REGISTRO*/
