--- a/Mis_Primeros_Auxilitos/estilosLogin.css
+++ b/Mis_Primeros_Auxilitos/estilosLogin.css
@@ -1,23 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400;700&display=swap');
 
-*{
-    margin:0;
-    text-align:center;
-}
+
 
 body{
 
     font-family:'DynaPuff', cursive;
     background: #f12711;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #f5af19, #f12711);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #f5af19, #f12711); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to right, #f5af19, #f12711);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f5af19, #f12711); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    text-align: center;
+}
 
+.content_login{
+    margin:0 auto;
+}
 
+#titulo-Auxilitos{
+    color:rgb(89, 255, 47);
+    font-size:3em;
 }
 
 #titulo{
 
     margin-top: 5%;
+    margin-bottom: 1em;
 
 }
 
@@ -28,13 +34,21 @@ background: linear-gradient(to right, #f5af19, #f12711); /* W3C, IE 10+/ Edge, F
     background: #40E0D0;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #FF0080, #FF8C00, #40E0D0);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #FF0080, #FF8C00, #40E0D0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-    margin-left:50%;
-    margin-right:30%;
     border-radius:10px;
     color: aliceblue;
-    margin:5%;
+   
     
+}
+
+
+form .grupo{
+    margin-bottom:30px;
+    display: block;
+    
+}
+
+.grupo{
+    margin: auto;
 }
 
 #correo{
@@ -44,6 +58,8 @@ background: linear-gradient(to right, #f5af19, #f12711); /* W3C, IE 10+/ Edge, F
     font-size:20px;
     background-color:rgb(38, 0, 255);
     color: white;
+    margin: auto;
+    
 
 }
 #contrasena{
@@ -53,6 +69,7 @@ background: linear-gradient(to right, #f5af19, #f12711); /* W3C, IE 10+/ Edge, F
     color: rgb(0, 0, 0);
     background-color:yellow;
     font-size:20px;
+    margin:auto;
     
 
 }
@@ -64,13 +81,26 @@ background: linear-gradient(to right, #f5af19, #f12711); /* W3C, IE 10+/ Edge, F
     background-color: green;
     color: aliceblue;
     font-size:20px;
+    cursor: pointer;
 
+}
+
+#img-btn-Facebook{
+    cursor: pointer;
+}
+#img-btn-Google{ 
+    cursor:pointer;
 }
 
 .footer { 
 
     position:relative bottom;
-    margin-top: 20%;
+    margin-top: 10%;
 
 }
 
+@media screen and (max-width:500px) {
+    form {
+        width:100%;
+    }
+}
