cuarto push 19/agosto/2022/ mejoras login y registro con scroll

--- a/Mis_Primeros_Auxilitos/estilos.css
+++ b/Mis_Primeros_Auxilitos/estilos.css
@@ -9,7 +9,7 @@ class == .
 
     margin: 0%;
     font-family: 'DynaPuff', cursive;
-    background: linear-gradient(to right, #FF0080, #FF8C00, #40E0D0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to top, #FF0080, #FF8C00, #40E0D0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 
 }
@@ -56,6 +56,31 @@ class == .
 
 }
 
+
+/*Scroll-bar*/
+::-webkit-scrollbar{
+    width:1.5em;
+    background:grey;
+}
+
+::-webkit-scrollbar-track{
+    background: #334d50;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #cbcaa5, #334d50);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #cbcaa5, #334d50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    border-radius:3em;
+}
+::-webkit-scrollbar-thumb{
+    /*background-image:url(/Images/Facebook.svg);*/
+    background-size: contain; 
+    background-repeat:no-repeat;
+    background: #ffe259;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #ffa751, #ffe259);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #ffa751, #ffe259); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    border-radius:2em;
+}
+
+
 /*FIN INDEX*/
 
 /*REGISTRO*/
@@ -76,9 +101,8 @@ class == .
     background-color:red;
     font-family: 'DynaPuff', cursive;
     background: #F7971E;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #FFD200, #F7971E);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #FFD200, #F7971E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: -webkit-linear-gradient(to right, #ff00aa, #f7e11e, #47c315);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ff00aa, #f7e11e, #47c315); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     height: 900px;
     display: flex;
     justify-content:center;
@@ -190,6 +214,23 @@ input:focus~.barra::before{
     border-radius:10px;
     display: block;
     width: 80%;
+    margin:10px auto;
+    color:white;
+    height: 40px;
+    font-size: 16px;
+    cursor:pointer;
+
+}
+
+#btn_Regresar{
+
+    font-family: 'DynaPuff', cursive;
+    background: #F7971E;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #FFD200, #F7971E);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFD200, #F7971E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    border-radius:10px;
+    display: block;
+    width: 60%;
     margin:10px auto;
     color:white;
     height: 40px;
