--- a/Mis_Primeros_Auxilitos/estilos.css
+++ b/Mis_Primeros_Auxilitos/estilos.css
@@ -24,6 +24,7 @@ class == .
     padding:0;
     font-family: 'DynaPuff', cursive;
     background: linear-gradient(to right, #FF0080, #FF8C00, #40E0D0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
 
 }
 /*
@@ -73,7 +74,71 @@ class == .
 }
 */
 
-/* Place the navbar at the bottom of the page, and make it stick */
+.div-padre{
+
+    display: flex;
+    position: relative;
+    background-color:rgb(255, 146, 4);
+    border-radius:10px;
+
+}
+
+#Title-index
+{
+
+    color:rgb(89, 255, 47);
+    font-size:2em;
+    text-shadow: 3px 5px 5px black;
+       
+
+}
+
+#circulo{
+
+    height:5em;
+    width:5em;
+    background:#3b3a3b;
+    -moz-border-radius:50px;
+    -webkit-border-radius:50px;
+    border-radius:50px;
+    display:flex;
+    position:absolute;
+    top:0;
+    right:0;
+
+}
+
+@media screen and (max-width:500px){
+    .div-padre{
+        width: 100%;
+        height: 5em;
+    }
+    #Title-index{
+        font-size:1.5em;
+    }
+
+}
+
+.opciones {
+    border:4px solid rgb(217, 255, 0);
+    display:flex;
+    justify-content:center;
+    margin:5em;
+    margin-top: 2em;
+    border-radius:10px;
+}
+
+.opcion {
+
+    background:rgb(77, 195, 48);
+    margin:0 auto;
+    height: 15em;
+    width: 15em;
+    text-align:center;
+    border-radius: 10px;
+    border: 1px solid black;
+
+}
 
 
 
@@ -87,8 +152,11 @@ class == .
     text-align: center;
     display:flex;
     justify-content:center;
+    border-radius:20px;
     
   }
+
+
 
 .hijos-navbar{
    
@@ -118,21 +186,7 @@ class == .
     background-color: #11ffa8;
   }
   
-.opciones {
-    overflow:hidden;
-    text-align: center;
-    margin:auto;
-    background:red;
-}
 
-.opcion {
-    display:inline-table;
-    border:10px solid #ccc;
-    padding:15px;
-    height:100px;
-    width:100px;
-    margin:3px;
-}
   
   
 
