--- a/Mis_Primeros_Auxilitos/estilos.css
+++ b/Mis_Primeros_Auxilitos/estilos.css
@@ -80,8 +80,29 @@ class == .
     position: relative;
     background-color:rgb(255, 146, 4);
     border-radius:10px;
+    animation-name:animacionDivTitle;
+    animation-duration:2s;
 
 }
+
+@keyframes animacionDivTitle {
+
+    0%{
+        top:-10px;
+    }
+    25%{ 
+        top:0px;
+    }
+    50%{ 
+        top:0px;
+    }
+    100%{
+        top:0px;
+    }
+
+}
+
+
 
 #Title-index
 {
@@ -153,8 +174,28 @@ class == .
     display:flex;
     justify-content:center;
     border-radius:20px;
+    animation-name: animacionIndex;
+    animation-duration: 2s;
     
   }
+
+  @keyframes animacionIndex {
+    0%{
+        bottom:-10px;
+    }
+    
+    25%{ 
+        bottom:0px;   
+    }
+    50%{
+        bottom:0px;      
+    }
+    100%{ 
+        bottom:0px;   
+    }
+
+    
+}
 
 
 
