--- a/Mis_Primeros_Auxilitos/estilos.css
+++ b/Mis_Primeros_Auxilitos/estilos.css
@@ -126,6 +126,7 @@ class == .
     position:absolute;
     top:0;
     right:0;
+    cursor: pointer;
 
 }
 
@@ -153,8 +154,8 @@ class == .
 
     background:rgb(77, 195, 48);
     margin:0 auto;
-    height: 15em;
-    width: 15em;
+    height: 18em;
+    width: 18em;
     text-align:center;
     border-radius: 10px;
     border: 1px solid black;
@@ -214,6 +215,7 @@ class == .
     padding:2%;
     border-radius:10px;
     width: 50px;
+    cursor: pointer;
     
   }
   
