Se sube en el css que no se pueda seleccionar el texto, ademas tambien se modifica javaScript.js

--- a/Mis_Primeros_Auxilitos/estilosLogin.css
+++ b/Mis_Primeros_Auxilitos/estilosLogin.css
@@ -43,6 +43,9 @@
     animation-name: mianimacion;
     animation-duration:2s;
     position:relative;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none
     
   
 
